--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,8 @@ a:hover {
 
 .text-credit {
   font-size: 11px;
+  margin-top: 5px;
+  padding-bottom: 20px;
 }
 
 .link-text {
@@ -143,10 +145,6 @@ a:hover {
   font-weight: 700;
 }
 
-.link-text:hover {
-  color: #3f3e3e;
-  font-weight: 700;
-}
 
 
 /* ProjectBackground
@@ -296,13 +294,4 @@ ul.interaction>li:before {
   background-color: #f5f5f5;
 }
 
-.about-footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 60px;
-  line-height: 60px;
-  margin-bottom: 10px;
-  background-color: #f5f5f5;
-  padding-bottom: 50px;
-}
+
