--- a/css/style.css
+++ b/css/style.css
@@ -99,23 +99,18 @@ a:hover {
 
 .subheading {
   text-transform: uppercase;
-  letter-spacing: 2px;
-  font-size: 18px;
+  letter-spacing: 1.5px;
+  font-size: 25px;
   font-weight: 600;
   border-left: 6px solid #44DCC4;
   padding-left: 25px;
   margin-bottom: 15px;
-  font-family: 'Montserrat', sans-serif;
-
-
-
-
+  font-family: 'Open Sans', sans-serif;
 }
 
 .content-subheading {
   font-size: 18px;
   font-family: 'Open Sans', sans-serif;
-
 }
 
 .project-header {
@@ -141,10 +136,13 @@ a:hover {
 }
 
 .link-text {
-  color: black;
-  font-weight: 700;
+  color: #0bc28b;
+  font-weight: 600;
 }
 
+.link-text:hover {
+  color: #0aa375;
+}
 
 
 /* ProjectBackground
