--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,7 @@ a:hover {
 /* ProjectBackground
 ------------------------------------------------- */
 #foodatoryBg {
-  background: url(../img/foodatory/foodatory-bg.jpg) no-repeat center;
+  background: url(../img/foodatory/foodatory-bg.jpg) no-repeat bottom;
   height: 25rem;
   position: relative;
   width: 100%;
