--- a/css/style.css
+++ b/css/style.css
@@ -187,7 +187,7 @@ a:hover {
 }
 
 #jessBg {
-  background: url(../img/jessSwann/jess-bg.jpg) no-repeat center;
+  background: url(../img/jessSwann/jess-bg.png) no-repeat center;
   height: 25rem;
   position: relative;
   width: 100%;
